--- a/templates/movies/show.html.twig
+++ b/templates/movies/show.html.twig
@@ -23,7 +23,8 @@
 
 		<img src="{{ movie.movieImg}}" class="rounded-md w-full  mb-8  shadow-xl" alt="Image of movie"/>
 
-       {% if app.user and movie.userId == app.user.id %}
+     {# if the user is login in and the movie id is valid #}
+       {% if  app.user and movie.id %}
 		{# update movie  #}
 		<div class="flex gap-4">
 			<a href="/movies/edit/{{ movie.id }}" class="bg-green-500 font-bold  py-2 px-4 rounded transition-all hover:bg-green-300">
@@ -34,7 +35,7 @@
 				Delete Movie
 			</a>
 		</div>
-		{# {% endif %} #}
+		{% endif %}
 
 	</div>
 {% endblock %}
